# serverless_sample_for_article

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: devcontainer.json
api/: index.html  openapi.json
aws/: __init__.py  app.py  cdk.json
coverage/: class_index.html  covindex.html  function_index.html  index.html  z_0618756b1ff51bca___init___py.html  z_145eef247bfb46b6_index_py.html  z_2955a10ab16b1d98___init___py.html  z_2955a10ab16b1d98_project_py.html  z_2955a10ab16b1d98_task_py.html  z_3e75c8c74f3edb6b___init___py.html  z_3e75c8c74f3edb6b_dynamodb_py.html  z_3e75c8c74f3edb6b_exceptions_py.html  z_5ee0df10b8f8963a___init___py.html  z_5ee0df10b8f8963a_project_py.html  z_5ee0df10b8f8963a_repositories_py.html  z_5ee0df10b8f8963a_task_py.html  z_65b9803bca3ad463___init___py.html  z_65b9803bca3ad463_project_py.html  z_65b9803bca3ad463_table_py.html  z_65b9803bca3ad463_task_py.html  z_67b705ad3caeec84___init___py.html  z_67b705ad3caeec84_project_py.html  z_67b705ad3caeec84_task_py.html  z_a3a443b2ac93a852___init___py.html  z_a3a443b2ac93a852_container_py.html  z_a7f03f5a59e0c351___init___py.html  z_a7f03f5a59e0c351_project_py.html  z_a7f03f5a59e0c351_task_py.html  z_b98acee1f6325743___init___py.html  z_b98acee1f6325743_application_py.html  z_b98acee1f6325743_domain_py.html
docs/: api.md  index.md
htmlcov/: class_index.html  function_index.html  status.json  z_0618756b1ff51bca___init___py.html  z_145eef247bfb46b6_index_py.html  z_2955a10ab16b1d98___init___py.html  z_2955a10ab16b1d98_project_py.html  z_2955a10ab16b1d98_task_py.html  z_3e75c8c74f3edb6b___init___py.html  z_3e75c8c74f3edb6b_dynamodb_py.html  z_3e75c8c74f3edb6b_exceptions_py.html  z_5ee0df10b8f8963a___init___py.html  z_5ee0df10b8f8963a_project_py.html  z_5ee0df10b8f8963a_repositories_py.html  z_5ee0df10b8f8963a_task_py.html  z_65b9803bca3ad463___init___py.html  z_65b9803bca3ad463_project_py.html  z_65b9803bca3ad463_table_py.html  z_65b9803bca3ad463_task_py.html  z_67b705ad3caeec84___init___py.html  z_67b705ad3caeec84_project_py.html  (+9 more)
(+70 files in other folders)
